Mention additional data source

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -28,10 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Consider using the following data:\n",
+    "# https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide\n",
+    "\n",
     "url = \"https://datahub.io/core/covid-19/r/time-series-19-covid-combined.csv\"\n",
     "# Datahub blocks requests coming from Python, so we specify a different user-agent here\n",
     "headers = {\"User-Agent\": \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:66.0) Gecko/20100101 Firefox/66.0\"}\n",
